--- a/GPCS_DMS/Views/Shared/_GridScripts.cshtml
+++ b/GPCS_DMS/Views/Shared/_GridScripts.cshtml
@@ -2,6 +2,6 @@
 <script src="~/js/grids/grid-state.js"></script>
 <script src="~/js/grids/grid-export.js"></script>
 <script src="~/js/grids/grid-toolbar.js"></script>
-<script src="~/js/grids/grid-custom-store.js"></script>
+<script src="~/js/grids/grid-store.js"></script>
 <script src="~/js/grids/base-grid.js"></script>
 <script src="~/js/grids/grid-factory.js"></script>
