--- a/GPCS_DMS/Views/Shared/_Layout.cshtml
+++ b/GPCS_DMS/Views/Shared/_Layout.cshtml
@@ -19,9 +19,14 @@
     @await RenderSectionAsync("Styles", required: false)
     <link href="~/css/devextreme/dx.light.css" rel="stylesheet" />
     <script src="~/js/devextreme/jquery.js"></script>
+
+    <script src="~/js/devextreme/dx.all.js"></script>
+    <script src="~/js/devextreme/aspnet/dx.aspnet.mvc.js"></script>
+    <script src="~/js/devextreme/aspnet/dx.aspnet.data.js"></script>
+
     <script src="~/js/devextreme/dx-exceljs-fork.min.js"></script>
     <script src="~/js/devextreme/filesaver.min.js"></script>
-    <script src="~/js/devextreme/dx.all.js"></script>
+    
     <script src="~/js/devextreme-license.js"></script>
 
     <script>
