--- a/GPCS_DMS/wwwroot/css/grid.css
+++ b/GPCS_DMS/wwwroot/css/grid.css
@@ -35,7 +35,8 @@
             min-height: 500px;
         }
 
-        .dx-datagrid-filter-panel .dx-datagrid-filter-panel-text,
-        .dx-datagrid-filter-panel .dx-icon-filter {
+        .dx-datagrid-filter-panel-left .dx-icon-filter,
+        .dx-datagrid-filter-panel-left .dx-datagrid-filter-panel-text
+        .dx-datagrid-filter-panel-clear-filter{
             color: #1890ff !important;
         }
