--- a/GPCS_DMS/Views/Shared/_Layout.cshtml
+++ b/GPCS_DMS/Views/Shared/_Layout.cshtml
@@ -131,22 +131,22 @@
                                     <h6 class="dropdown-header">Application</h6>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" asp-controller="Reports" asp-action="Index">
+                                    <a class="dropdown-item" asp-controller="Report" asp-action="Index">
                                         📉 Dashboard
                                     </a>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" asp-controller="Reports" asp-action="Application">
+                                    <a class="dropdown-item" asp-controller="Report" asp-action="Application">
                                         📄 Applications
                                     </a>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" asp-controller="Reports" asp-action="ApplicationHistory">
+                                    <a class="dropdown-item" asp-controller="Report" asp-action="ApplicationHistory">
                                         🕒 Application History
                                     </a>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" asp-controller="Reports" asp-action="FileAttachment">
+                                    <a class="dropdown-item" asp-controller="Report" asp-action="FileAttachment">
                                         📎 File Attachments
                                     </a>
                                 </li>
@@ -157,7 +157,7 @@
                                     <h6 class="dropdown-header">Stock Reports</h6>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" asp-controller="Reports" asp-action="StockControl">
+                                    <a class="dropdown-item disabled" asp-controller="Report" asp-action="StockControl">
                                         📊 Stock Control
                                     </a>
                                 </li>
